# project_249

./: .gitignore  CHANGELOG.md  Project249.spec  README.md  build.py  pyproject.toml  requirements.txt  run.py  run_web.py  run_web_enhanced.py  setup.py  项目框架.txt
examples/: 01_simple_chat.py  02_stream_output.py  03_log_control.py  04_rag_system.py  05_long_term_memory.py  06_react_agent.py  07_plan_execute.py  08_error_handling.py  README.md  __init__.py
project_249/: __init__.py  cli.py
project_249/agent/: __init__.py  base.py  hub.py  plan_execute.py  react_agent.py  simple_chat.py  目录结构.txt
project_249/chains/: __init__.py  rag_chain.py  目录结构.txt
project_249/config/: .env.example  __init__.py  settings.py  setup.py  目录结构.txt
project_249/llms/: __init__.py  base.py  deepseek_adapter.py  deepseek_embedding.py  deepseek_function_call.py  目录结构.txt
project_249/memory/: __init__.py  base.py  long_term.py  short_term.py  summarizer.py  目录结构.txt
project_249/prompts/: personas.py  项目结构.txt
project_249/schemas/: 目录结构.txt
project_249/storage/: database.py
project_249/storage/RAG/: __init__.py  embeddings.py  retriever.py  (+1 more)
project_249/tools/: __init__.py  baidu.py  base.py  check_path.py  config.py  get_time.py  mkdir.py  path_utils.py  square_calculate.py  tools_list.py  weather_query.py  write_to_file.py  目录结构.txt
project_249/utils/: __init__.py  logger.py  token_counter.py  typewriter.py  目录结构.txt
tests/: conftest.py  test_agent.py  test_config.py  test_imports.py  test_llm.py  test_logger.py  test_memory.py  test_text_splitter.py  test_tools.py
